@@ -91,6 +91,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - ECMAScript             Michel Mariani
 - Eiffel                 Zoran Simic
 - eMail \ mbox           Benny Baumann
+- EPC                    Thorsten Muehlfelder
 - Erlang                 Benny Baumann, Dan Forest-Barbier, Uwe Dauernheim
 - F#                     Julien Ortin
 - FO (abas-ERP)          Tan-Vinh Nguyen
